--- a/build.gradle
+++ b/build.gradle
@@ -225,7 +225,7 @@ static String[] getArray(String deps) {
 }
 
 String changelog(Project project) {
-    String logFmt = '--pretty=tformat:- [%s](' + project.changelog_repository.toString() + ') - *%aN*'
+    String logFmt = '--pretty=tformat:"- [%s](' + project.changelog_repository.toString() + ') - *%aN*"'
     def stdout = new ByteArrayOutputStream()
     def gitHash = System.getenv('GIT_COMMIT')
     def gitPrevHash = System.getenv('GIT_PREVIOUS_COMMIT')
@@ -235,7 +235,7 @@ String changelog(Project project) {
 
     if (gitHash != null && gitPrevHash != null) {
         exec {
-            commandLine 'sh', '-c', "git log ${logFmt} ${gitPrevHash}...${gitHash} | grep -v '^\\[meta\\]'"
+            commandLine 'bash', '-c', "git log ${logFmt} ${gitPrevHash}...${gitHash} | grep -v '^\\[meta\\]'"
             standardOutput = stdout
         }
     } else {
